kube/notification-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  labels:
    app.kubernetes.io/name: notification-worker
    app.kubernetes.io/part-of: disaster-relief
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-worker
        app.kubernetes.io/part-of: disaster-relief
        app.kubernetes.io/component: worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: notification-worker
          image: acrdisasterreliefdev.azurecr.io/notification-worker:118e147f5bfd833a8dda95e2a0e19903b65e7871
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
